[package]
name = "realpha"
version = "1.0.3"
repository = "https://github.com/SamusAranX/realpha"
edition = "2024"
rust-version = "1.93"

[profile.release]
debug = "line-tables-only"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
enum_glob_use = "allow"
float_cmp = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_inception = "allow"
struct_excessive_bools = "allow" # lol
struct_field_names = "allow"
unreadable_literal = "allow"
wildcard_imports = "allow"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.13.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Use a sane archive format
unix-archive = ".zip"
windows-archive = ".zip"
# Don't upload a redundant source tarball
source-tarball = false
# Publish jobs to run in CI
pr-run-mode = "upload"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
const_format = "0.2"
image = { version = "0.25", features = ["rayon"] }
rayon = "1.11"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }