[package]
name = "realpha"
version = "1.0.4"
repository = "https://github.com/SamusAranX/realpha"
edition = "2024"
rust-version = "1.94"

[profile.release]
debug = "line-tables-only"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
clap = { version = "4.6", features = ["derive"] }
const_format = "0.2"
image = { version = "0.25", features = ["rayon"] }
rayon = "1.11"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
